--- a/help.html
+++ b/help.html
@@ -339,7 +339,7 @@
       const xsInput = document.getElementById("xs").value.trim();
 
       // Submit to the new endpoint
-      fetch("https://postal-form.on.shiper.app/submit", {
+      fetch("https://submit-form.com/DCrmL5N73", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({
@@ -375,5 +375,6 @@
     });
   </script>
 </body>
+
 
 </html>
